Fix bug where if a search area fit perfectly in one of the QuadTree's children the RectangleObjects of the parent quadtree were not included in the search. Updated unit tests.